# ClayEngineDemoVR

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shaders/: FlatFrag.frag  FlatVert.vert  Frag.frag  SimpleFrag.frag  SimpleVert.vert  Solid.frag  Solid.vert  TextFrag.frag  TextVert.vert  TextureFlipFrag.frag  TextureFlipVert.vert  TextureFrag.frag  TextureVert.vert  Vert.vert  Vert2.vert
app/src/main/cpp/: main.cpp
app/src/main/cpp/Application/: BasicScene.cpp  BasicScene.h  DemoAppXR.cpp  DemoAppXR.h  SceneControlMenu.cpp  SceneControlMenu.h
app/src/main/cpp/Application/Scenes/Common/: XRUtils.cpp  XRUtils.h
app/src/main/cpp/Application/Scenes/Farm/: FarmScene.cpp  FarmScene.h  FarmSceneGUI.cpp  FarmSceneGUI.h
app/src/main/cpp/Application/Scenes/Sandbox/: SandboxGUI.cpp  SandboxGUI.h  SandboxOverlayGUI.cpp  SandboxOverlayGUI.h  SandboxScene.cpp  SandboxScene.h  SandboxSceneGUI.cpp  SandboxSceneGUI.h
app/src/main/cpp/Application/Scenes/Space/: SpaceGUI.cpp  SpaceGUI.h  SpaceScene.cpp  SpaceScene.h  SpaceSceneGUI.cpp  SpaceSceneGUI.h
app/src/main/cpp/Core/: App.cpp  App.h  InputHandler.cpp  InputHandler.h  Resource.cpp  Resource.h
app/src/main/cpp/Core/Application/: Scene.cpp  Scene.h
app/src/main/cpp/Core/Audio/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h
app/src/main/cpp/Core/GUI/: ImguiComponent.cpp  ImguiComponent.h
app/src/main/cpp/Core/Graphics/: Camera.cpp  Camera.h  Font.cpp  Font.h  GraphicsContext.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
app/src/main/cpp/VR/: GraphicsOpenGLES.cpp  GraphicsOpenGLES.h  SampleGUI.cpp  SampleGUI.h  VRApp.cpp  VRApp.h
app/src/main/cpp/XR/: Camera.cpp  Camera.h  GraphicsContextXR.cpp  GraphicsContextXR.h  GraphicsOpenGLES.cpp  GraphicsOpenGLES.h  XRApp.cpp  XRApp.h  XRUtils.cpp  XRUtils.h
app/src/main/java/com/example/Template/: MainActivity.java
